2004-05-05 Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/dialogs/text-edit.cpp, configure.in: Added support for spell
	checking in text dialog.
	
2004-05-04  MenTaLguY <mental@rydia.net>

	* src/display/nr-arena-glyphs.h: fixed cut-and-paste error in
	  NRArenaGlyphsGroup::create()

	* src/selection.cpp, src/selection.h: fixed global "changed" propagation

2004-05-02  MenTaLguY <mental@rydia.net>

	* src/file.cpp, src/print.cpp, src/sp-chars.cpp, src/sp-clippath.cpp,
	  src/sp-image.cpp, src/sp-item-group.cpp, src/sp-mask.cpp,
	  src/sp-pattern.cpp, src/sp-shape.cpp, src/sp-text.cpp,
	  src/sp-use.cpp, src/dialogs/stroke-style.cpp,
	  src/display/canvas-arena.cpp, src/display/nr-arena-glyphs.cpp,
	  src/display/nr-arena-glyphs.h, src/display/nr-arena-group.h,
	  src/display/nr-arena-image.h, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-item.h, src/display/nr-arena-shape.h,
	  src/display/nr-arena.h, src/libnr/nr-object.h, src/widgets/icon.cpp:

	  removed nr_arena_item_new in favor of static ::create() functions
	  which call NRArenaItem::init() to perform setup (i.e. setting
	  NRArenaItem::arena).  Eventually NRArenaItem::init() and
	  nr_arena_item_init will merge and become NRArenaItem's constructor.

2004-04-30  MenTaLguY <mental@rydia.net>

    * src/sp-use.cpp: call parent class' write methods rather than
	  attempting to do everything (wrongly) ourselves; among other
	  things, <use> transform attributes weren't getting written

	* src/sp-object.h, src/sp-object.cpp:

	  designate a "successor" object so we still perform as
	  expected if objects are replaced in the middle of e.g. a 
	  bulk delete operation

	* src/sp-use.cpp: cleanups and succession logic for <use>
	  deletion

    * src/widgets/sp-hwrap-box.cpp, src/widgets/sp-hwrap-box.h,
	  src/widgets/sp-vwrap-box.cpp, src/widgets/sp-vwrap-box.h,
	  src/widgets/sp-wrap-box.cpp, src/widgets/sp-wrap-box.h,
	  src/widgets/test-wrapbox.cpp, src/widgets/Makefile_insert:
